--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,8 @@
       <title>Headlyne.me | Top Headlines Around the World Now</title>
     </head>
     <body onload="initialize()">
+      <h1>Headlyne</h1>
+      <h3>The latest headlines from around the world, visualized</h3>
       <div id="earth_div"></div>
   </body>
 </html>
